--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./redditAww/src/style.css" />
     <title>r/Aww</title>
   </head>
   <body>
     <h1>A subreddit for cute and cuddly pictures</h1>
     <main>
       <div class="container"></div>
-      <script src="app.js"></script>
+      <script src="./redditAww/src/app.js"></script>
     </main>
   </body>
 </html>
